--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="ascii-div">
          <pre id="ascii"></pre>
       </div>
-      <pre>Links:</pre>
+      <pre>gang</pre>
       <pre>[<div id="marquee"><div class="js-marquee-wrapper"><div class="js-marquee"></div></div></div>]</pre>
       <br> 
    </div>
