--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <head>
    <meta charset="utf-8" />
-   <title>$$$$$$$$$</title>
-   <script src="title.js"></script> 
+   <title>Cha Owns You And All</title>
    <link rel="stylesheet" href="style.css" />
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> <script>/*<![CDATA[*/document.addEventListener('contextmenu',event=>event.preventDefault());$(document).keydown(function(event){if(event.keyCode==123){return false;}else if(event.ctrlKey&&event.shiftKey&&event.keyCode==73){return false;}else if(event.ctrlKey&&event.shiftKey&&event.keyCode==67){return false;}else if(event.ctrlKey&&event.keyCode==85){return false;}});/*]]>*/</script> 
 </head>
